# clipboardy

./: .clang-format  .gitignore  CMakeLists.txt  README.md
client/: main.cpp
cmake/: client.cmake  server.cmake
commons/headers/: clipboard_manager.hpp  websocket_client.hpp
linux/: CMakeLists.txt  main.cpp
linux/headers/: clip_x11_png.h
linux/includes/: clip.cpp  clip.h  clip_common.h  clip_lock_impl.h  clip_x11.cpp  clip_x11_png.h  clipboard_manager.cpp  clipboard_manager.hpp  net.hpp  websocket_client.cpp  websocket_client.hpp
platform/cross/: clip.cpp  clipboard_manager.cpp  http_session.cpp  listener.cpp  shared_state.cpp  websocket_client.cpp  websocket_session.cpp
platform/cross/headers/: clip.h  clip_common.h  clip_lock_impl.h  http_session.hpp  listener.hpp  shared_state.hpp  websocket_session.hpp
platform/linux/: clip_x11.cpp
platform/windows/: clip_win.cpp
server/: main.cpp
windows/: main.cpp
windows/headers/: clip_win.h
